--- a/Project2/Info.plist
+++ b/Project2/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>Please allow access to save photo in your photo library</string>
+    <key>NSCameraUsageDescription</key>
+    <string>This app will use camera.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Your photo will be used.</string>
 	<key>CFBundleDevelopmentRegion</key>
