Let ContainerViewController and ImageEditContainerViewController conform to BaseContainerViewController to avoid repeating code.

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ Temporary Items
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 ## Build generated
+GoogleService-Info.plist
 build/
 DerivedData/
 
